fix: adjust spacing in navbar

--- a/public/output.css
+++ b/public/output.css
@@ -1203,6 +1203,14 @@ video {
   padding-top: 1rem;
 }
 
+.pr-4 {
+  padding-right: 1rem;
+}
+
+.pr-2 {
+  padding-right: 0.5rem;
+}
+
 .text-left {
   text-align: left;
 }
